--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -5,6 +5,13 @@
   display: flex;
   justify-content: center;
   display: fixed;
+
+  @media only screen and (max-width: $bp-large) {
+   grid-column: 1 / -1;
+   grid-row: 1 / 2;
+   justify-content: flex-end;
+   align-items: center;
+  }
 }
 
 .nav-btn {
@@ -34,4 +41,15 @@
   &::after {
     transform: translateY(1.3rem);
   }
+
+  @media only screen and (max-width: $bp-large) {
+    margin-top: 0;
+    margin-right: 1.5rem;
+    &::before {
+      transform: translateY(-1.2rem);
+    }
+    &::after {
+      transform: translateY(1rem);
+    }
+   }
 }
