--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,11 +3,17 @@
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
     background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
+    background-position: cover;
 
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     align-items: center;
+    padding: 5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+    }
   }
 
   &__img--1 {
@@ -15,6 +21,11 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, .1);
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__img--2 {
@@ -23,6 +34,10 @@
     grid-column: 4 / 7;
     z-index: 10;
     box-shadow: 0 2rem 5rem rgba(#000, .2);
+    @media only screen and (max-width: $bp-medium) {
+      width: 100%;
+      grid-row: 2 / 6;
+    }
   }
 
   &__content {
@@ -34,6 +49,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
